--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Dish -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => Dish %></h1>
+  <h1><%=t '.title', default: Dish %></h1>
 </div>
 <table class="table table-striped">
   <thead>
@@ -9,8 +9,8 @@
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:price) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th> 加入待買 </th>
+      <th> Dish Type </th>
     </tr>
   </thead>
   <tbody>
@@ -20,21 +20,13 @@
         <td><%= dish.name %></td>
         <td><%= dish.description %></td>
         <td><%= dish.price %></td>
-        <td><%=l dish.created_at, format: :long %></td>
-        <td>
-          <%= link_to dish_path(dish), :class => 'btn btn-xs', :title => "#{ t('.show', :default => t('helpers.links.show')) }" do %>
-            <%= glyph 'info-sign' %>
-            <%= glyph 'pencil' %>
-          <%- end -%>
-          <%= link_to dish_path(dish), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs', :title => "#{ t('.destroy', :default => t('helpers.links.destroy')) }" do %>
-            <%= glyph 'remove' %>
-          <%- end -%>
-        </td>
+        <td> <%= link_to '加入待買', to_buys_path(dish_id: dish.id), method: :post %> </td>
+        <td> <%= dish.dish_type.name %> </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t('.new', default: t("helpers.links.new")),
             new_dish_path,
-            :class => 'btn btn-primary' %>
+            class: 'btn btn-primary' %>
