--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
 <%= bootstrap_flash %>
 
 
-<%= yield %>
+<div class="container-fluid" style="width: 80%">
+  <%= yield %>
+</div>
 
 </body>
 </html>
