--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -1,4 +1,6 @@
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="/assets/stylesheets/common.css" rel="stylesheet">
+
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
