--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -10,7 +10,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <%= link_to "My Application", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
+    <%= link_to "肚肚餓餓的", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -22,16 +22,16 @@
         <% if user_signed_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>
-            Account <b class="caret"></b></a>
+            您的帳戶 <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Edit Account", edit_user_registration_path %></li>
+              <li><%= link_to "帳戶管理", edit_user_registration_path %></li>
               <li class="divider"></li>
-              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+              <li><%= link_to "登出", destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Login", new_user_session_path %></li>
-          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+          <li><%= link_to "登入", new_user_session_path %></li>
+          <li><%= link_to "註冊", new_user_registration_path %></li>
         <% end %>
       <% end %>
     </ul>
