--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -7,8 +7,10 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <%= link_to "My Application", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
-  </div>
+    <%= link_to "待買清單", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
+    <%= link_to "餐廳列表", defined?(restaurants_path) ? restaurants_path : "#", class: "navbar-brand" %>
+    <%= link_to "訂單", defined?(orders_path) ? orders_path : "#", class: "navbar-brand" %>
+   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="navbar-collapse-1">
