--- a/app/views/to_buys/index.html.erb
+++ b/app/views/to_buys/index.html.erb
@@ -5,8 +5,8 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th> Dish </th>
-      <th> 餐廳 </th>
+      <th> 欲購買的餐點 </th>
+      <th> 所屬餐廳 </th>
     </tr>
   </thead>
   <tbody>
