--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -13,7 +13,7 @@
     <img id="header-img" src="file:///Users/SteffYang/Desktop/NTU/DB/db_final/app/assets/images/dd22d.png">
     <%= link_to "待買清單", defined?(root_path) ? root_path : "#", class: "navbar-brand" %>
     <%= link_to "餐廳列表", defined?(restaurants_path) ? restaurants_path : "#", class: "navbar-brand" %>
-    <%= link_to "訂單", defined?(orders_path) ? orders_path : "#", class: "navbar-brand" %>
+    <%= link_to "訂單查詢", defined?(orders_path) ? orders_path : "#", class: "navbar-brand" %>
    </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
