--- a/app/views/to_buys/index.html.erb
+++ b/app/views/to_buys/index.html.erb
@@ -1,5 +1,6 @@
 <%- model_class = ToBuy -%>
 <div class="page-header">
+  <h1><%=t '您的待買清單'%></h1>
   <h1><%=t '.title', :default => ToBuy %></h1>
 </div>
 <table class="table table-striped">
