--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,10 @@
   max-width: 450px;
 }
 
+body {
+	background-color: white;
+}
+
 .navbar-default {
 	background-color: #f16b2e;
 	border-color: #f16b2e;
