--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,6 @@
 <%- model_class = Order -%>
 <div class="page-header">
+  <h1><%=t '您的餐點訂單'%></h1>
   <h1><%=t '.title', :default => Order %></h1>
 </div>
 <table class="table table-striped">
