--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,9 @@
 }
 
 body {
-	background-color: white;
+	background-image: url("assets/images/swirl_pattern.png") ;
+	background-size: 20% 20%;
+	
 }
 
 .navbar-default {
