--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,8 +7,8 @@
   <thead>
     <tr>
       <th>訂單編號</th>
-      <th><%= model_class.human_attribute_name(:total_price) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%= model_class.human_attribute_name(:總價格) %></th>
+      <th><%= model_class.human_attribute_name(:下單時間) %></th>
     </tr>
   </thead>
   <tbody>
