--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@
 }
 
 body {
-	background-image: url("../public/images/swirl_pattern.png") ;
+	background-image: url("/assets/swirl_pattern.png") ;
 	background-size: 20% 20%;
 	
 }
