--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,8 +37,8 @@
 }
 
 body {
-	background-image: url("/assets/swirl_pattern.png") ;
-	background-size: 20% 20%;
+	background-image: url("/assets/contemporary_china.png") ;
+	background-size: 30% 30%;
 	
 }
 
@@ -78,4 +78,5 @@ body {
 
 #header-img {
 	height: 80px;
+	margin: 10px 40px 10px 40px;
 }
