--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -4,7 +4,10 @@
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
-  <img id="header-img" src="/assets/dd22d.png">
+  <a class="navbar-brand">
+        <img style="max-width:80px; margin-top: -28px;"
+             src="assets/dd22d.png">
+  </a>
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
