--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -5,8 +5,7 @@
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
   <a class="navbar-brand">
-        <img style="max-width:80px; margin-top: -28px;"
-             src="assets/dd22d.png">
+        <img style="max-width:90px; margin-top: -25px;" src="assets/dd22d.png">
   </a>
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
       <span class="sr-only">Toggle navigation</span>
