--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,3 +74,11 @@ body {
 .navbar-brand {
 	padding: 40px;
 }
+
+.label-default {
+	background-color: #f16b2e;
+	font-size: 14px;
+	height: 16px;
+	line-height: 16px;
+	border-radius: 0px;
+}
