--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -5,12 +5,12 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>ID</th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:price) %></th>
+      <th>餐點 ID</th>
+      <th><%= model_class.human_attribute_name(:餐點名稱) %></th>
+      <th><%= model_class.human_attribute_name(:餐點敘述) %></th>
+      <th><%= model_class.human_attribute_name(:價格) %></th>
       <th> 加入待買 </th>
-      <th> Dish Type </th>
+      <th> 餐點類型 </th>
     </tr>
   </thead>
   <tbody>
