--- a/app/views/restaurant_feedbacks/index.html.erb
+++ b/app/views/restaurant_feedbacks/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th><%= model_class.human_attribute_name(:content) %></th>
+      <th><%= model_class.human_attribute_name(:餐廳評價) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
